[package]
name = "objc"
version = "0.1.7"
authors = ["Steven Sheldon"]

description = "Objective-C Runtime bindings and wrapper for Rust."
keywords = ["objective-c", "osx", "ios", "cocoa", "uikit"]
readme = "README.md"
repository = "http://github.com/SSheldon/rust-objc"
documentation = "http://ssheldon.github.io/rust-objc/objc/"
license = "MIT"

exclude = [".gitignore", ".travis.yml", "ios-tests/**", "xtests/**"]

[features]
exception = ["objc_exception"]

[dependencies]
libc = ">= 0.1, < 0.3"
malloc_buf = "0.0"

[dependencies.objc_exception]
version = "0.0"
optional = true
