[package]
name = "objc"
version = "0.0.5"
authors = ["Steven Sheldon"]

description = "Objective-C Runtime bindings and wrapper for Rust."
repository = "http://github.com/SSheldon/rust-objc"
documentation = "http://ssheldon.github.io/rust-objc/objc/"
license = "MIT"

[lib]
name = "objc"
path = "lib.rs"

[features]
verify_message_encode = []
default = ["verify_message_encode"]

[dependencies]
libc = "0.1"
malloc_buf = "0.0"

[dev-dependencies]
objc_test_utils = "0.0"
