[package]
name = "objc"
version = "0.1.0"
authors = ["Steven Sheldon"]

description = "Objective-C Runtime bindings and wrapper for Rust."
repository = "http://github.com/SSheldon/rust-objc"
documentation = "http://ssheldon.github.io/rust-objc/objc/"
license = "MIT"

[lib]
name = "objc"
path = "lib.rs"

[dependencies]
libc = "0.1"
malloc_buf = "0.0"

[dev-dependencies]
objc_test_utils = "0.0"
