[package]
name = "test_ns_object"
version = "0.0.1"
authors = ["Niels Grewe"]

description = "Mock implementation of NSObject for tests"
repository = "http://github.com/SSheldon/rust-objc"
license = "MIT"

build = "build.rs"

[features]
gnustep = [ "gcc" ]

[lib]
name = "test_ns_object"
path = "lib.rs"

[build-dependencies.gcc]
gcc = "0.3"
optional = true
